--- a/businesses.html
+++ b/businesses.html
@@ -14,15 +14,76 @@
     <title>Our Businesses | Ansaf</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="navbar">
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="img-fluid" src="images/ansaf-logo.png" alt="">
-                </div>
-            </div>
+  <div class="container-fluid navbar-ansaf">
+    <div class="row">
+        <div class="col-lg-2 ml-lg-5">
+          <a href="index.html">
+            <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-lg-8 menu-wrap ml-lg-5">
+          <ul>
+            <li>
+              <a href="about.html">
+                About Us
+              </a>
+              <ul>
+                <li>
+                  <a href="about.html">
+                    Company Profile
+                  </a>
+                </li>
+                <li>
+                  <a href="vision-mission.html">
+                    Vision & Mission
+                  </a>
+                </li>
+                <li>
+                  <a href="bod.html">
+                    Board of Directors
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="businesses.html">
+                Our Businesses
+              </a>
+            </li>
+            <li>
+              <a href="projects.html">
+                Our Projects
+              </a>
+            </li>
+            <li>
+              <a href="csr.html">
+                CSR
+              </a>
+            </li>
+            <li>
+              <a href="gallery.html">
+                Gallery
+              </a>
+            </li>
+            <li>
+              <a href="contact.html">
+                Contact Us
+              </a>
+            </li> 
+          </ul>
+        </div>
+        <div class="col-lg-1 lang-ansaf">
+          <div class="divider"></div>
+          <ul>
+            <li>
+              <a href="#">
+                ID
+              </a>
+            </li>
+          </ul>
         </div>
     </div>
+</div>
     <div class="container-fluid bus-top">
       <div class="row">
         <div class="col-lg-12 pl-lg-0">
@@ -73,7 +134,7 @@
                   untuk mengelola IUP di Embalut dan Batuah dan<br>
                   melakukan diversifikasi usaha ke bidang lain...
                 </p>
-                <a href="#" class="link-gray-border my-lg-3 d-inline-block">
+                <a href="business-mining.html" class="link-gray-border my-lg-3 d-inline-block">
                   SELENGKAPNYA
                 </a>
             </div>
@@ -101,7 +162,7 @@
                   perusahaan. Kita menangani perencanaan tambang,<br>
                   pengangkutan lapisan tanah penutup...
                 </p>
-                <a href="#" class="link-gray-border my-lg-3 d-inline-block">
+                <a href="business-services.html" class="link-gray-border my-lg-3 d-inline-block">
                   SELENGKAPNYA
                 </a>
             </div>
@@ -123,7 +184,7 @@
                   barging. Saat ini terdapat 2 perusahaan yang<br>
                   bergerak dibidang support coal barging...
                 </p>
-                <a href="#" class="link-gray-border my-lg-3 d-inline-block">
+                <a href="business-logistic.html" class="link-gray-border my-lg-3 d-inline-block">
                   SELENGKAPNYA
                 </a>
             </div>
@@ -165,7 +226,7 @@
           <div class="container">
               <div class="row text-center">
                   <div class="col-lg-12">
-                    <a href="#" class="link-orange-border mx-lg-4">
+                    <a href="contact.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         HUBUNGI KAMI
                       </span> 
