--- a/projects.html
+++ b/projects.html
@@ -157,7 +157,7 @@
           <div class="container">
               <div class="row text-center">
                   <div class="col-lg-12">
-                    <a href="#" class="link-orange-border mx-lg-4">
+                    <a href="contact.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         HUBUNGI KAMI
                       </span> 
