--- a/index.html
+++ b/index.html
@@ -434,26 +434,26 @@
         </div>
         <div class="row">
             <div class="container">
-                <div class="row text-center">
+                <div class="row text-center counter-wrapper">
                     <div class="col-lg-4">
-                        <h2 class="text-blue number-counter font-75">
-                            9+
+                        <h2 class="text-blue number-counter font-75" data-count="9">
+                            0
                         </h2>
                         <h4 class="text-orange">
                             TAHUN
                         </h4>
                     </div>
                     <div class="col-lg-4">
-                        <h2 class="text-blue number-counter font-75">
-                            100+
+                        <h2 class="text-blue number-counter font-75"  data-count="100">
+                            0
                         </h2>
                         <h4 class="text-orange">
                             KLIEN
                         </h4>
                     </div>
                     <div class="col-lg-4">
-                        <h2 class="text-blue number-counter font-75">
-                            2,000+
+                        <h2 class="text-blue number-counter font-75"  data-count="2000">
+                            0
                         </h2>
                         <h4 class="text-orange">
                             KARYAWAN
