--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
           <img class="content-mid" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
-      <div class="row mt-lg-5 second-section">
+      <div class="row second-section">
         <div class="col-lg-8 offset-lg-3">
           <h3 class="text-white">
             Milestone
