--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img class="img-fluid logo" src="images/logo-white.png" alt="">
                 </a>
             </div>
-            <div class="col-lg-8 menu-wrap ml-lg-5">
+            <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
               <ul>
                 <li>
                   <a href="about.html">
@@ -72,7 +72,7 @@
                 </li> 
               </ul>
             </div>
-            <div class="col-lg-1 lang-ansaf">
+            <div class="col-lg-1 lang-ansaf d-none d-lg-block">
               <div class="divider"></div>
               <ul>
                 <li>
@@ -92,7 +92,7 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-lg-2 home-caption">
-                                <div class="wrapper d-flex">
+                                <div class="wrapper d-lg-flex d-none">
                                     <div class="inline-block">
                                         <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
                                     </div>
@@ -111,7 +111,25 @@
                                 </div>
                             </div>
                             <div class="col-lg-10">
-                                <img class="img-fluid float-right" src="images/home-top-image-slider-07.png" alt="">
+                                <div class="wrapper d-flex d-lg-none">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-2">
+                                        <h1 class="text-white">
+                                            Solution<br>
+                                            through<br>
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white my-4">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                                <img class="img-fluid float-right d-none d-lg-block" src="images/home-top-image-slider-07.png" alt="">
+                                <img class="img-fluid float-right d-lg-none" src="images/home-top-image-slider-mobile-15.jpg" alt="">
                                 <div class="slide-number">
                                     <h6 class="text-white">
                                         1/5
@@ -154,7 +172,7 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-lg-2 home-caption">
-                                <div class="wrapper d-flex">
+                                <div class="wrapper d-lg-flex d-none">
                                     <div class="inline-block">
                                         <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
                                     </div>
@@ -173,7 +191,74 @@
                                 </div>
                             </div>
                             <div class="col-lg-10">
-                                <img class="img-fluid float-right" src="images/home-top-image-slider-09.png" alt="">
+                                <div class="wrapper d-flex d-lg-none">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-2">
+                                        <h1 class="text-white">
+                                            Solution<br>
+                                            through<br>
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white  my-4">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                                <img class="img-fluid float-right d-none d-lg-block" src="images/home-top-image-slider-08.png" alt="">
+                                <img class="img-fluid float-right d-lg-none" src="images/home-top-image-slider-mobile-15.jpg" alt="">
+                                <div class="slide-number">
+                                    <h6 class="text-white">
+                                        2/5
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-lg-2 home-caption">
+                                <div class="wrapper d-lg-flex d-none">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-lg-3">
+                                        <h1 class="text-white">
+                                            Solution
+                                            through
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-10">
+                                <div class="wrapper d-flex d-lg-none">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-2">
+                                        <h1 class="text-white">
+                                            Solution<br>
+                                            through<br>
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white  my-4">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                                <img class="img-fluid float-right d-none d-lg-block" src="images/home-top-image-slider-09.png" alt="">
+                                <img class="img-fluid float-right d-lg-none" src="images/home-top-image-slider-mobile-15.jpg" alt="">
                                 <div class="slide-number">
                                     <h6 class="text-white">
                                         3/5
@@ -185,7 +270,7 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-lg-2 home-caption">
-                                <div class="wrapper d-flex">
+                                <div class="wrapper d-lg-flex d-none">
                                     <div class="inline-block">
                                         <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
                                     </div>
@@ -204,7 +289,25 @@
                                 </div>
                             </div>
                             <div class="col-lg-10">
-                                <img class="img-fluid float-right" src="images/home-top-image-slider-10.png" alt="">
+                                <div class="wrapper d-flex d-lg-none">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-2">
+                                        <h1 class="text-white">
+                                            Solution<br>
+                                            through<br>
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white  my-4">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                                <img class="img-fluid float-right d-none d-lg-block" src="images/home-top-image-slider-10.png" alt="">
+                                <img class="img-fluid float-right d-lg-none" src="images/home-top-image-slider-mobile-15.jpg" alt="">
                                 <div class="slide-number">
                                     <h6 class="text-white">
                                         4/5
@@ -216,7 +319,7 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-lg-2 home-caption">
-                                <div class="wrapper d-flex">
+                                <div class="wrapper d-lg-flex d-none">
                                     <div class="inline-block">
                                         <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
                                     </div>
@@ -235,7 +338,25 @@
                                 </div>
                             </div>
                             <div class="col-lg-10">
-                                <img class="img-fluid float-right" src="images/home-top-image-slider-11.png" alt="">
+                                <div class="wrapper d-flex d-lg-none">
+                                    <div class="inline-block">
+                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                    </div>
+                                    <div class="inline-block pl-2">
+                                        <h1 class="text-white">
+                                            Solution<br>
+                                            through<br>
+                                            Partnership
+                                        </h1>
+                                        <p class="text-white  my-4">
+                                            Ansaf sangat tepat menjadi<br>
+                                            mitra karena memerikan solusi<br>
+                                            yang dibutuhkan klien
+                                        </p>
+                                    </div>
+                                </div>
+                                <img class="img-fluid float-right d-none d-lg-block" src="images/home-top-image-slider-11.png" alt="">
+                                <img class="img-fluid float-right d-lg-none" src="images/home-top-image-slider-mobile-15.jpg" alt="">
                                 <div class="slide-number">
                                     <h6 class="text-white">
                                         5/5
@@ -253,12 +374,22 @@
                     <h6 class="text-orange mb-4">
                         TENTANG KAMI
                     </h6>
-                    <p class="text-white">
+                    <p class="text-white d-none d-lg-block">
                         Kami memahami bahwa batubara adalah salah satu sumber daya alam yang<br>
                         berperan penting bagi ketersediaan energi bagi manusia. Upaya kami masuk<br>
                         kesektor pertambangan batubara, yang membutuhkan kesungguhan dalam<br>
                         mengelolanya, berawal dari keinginan untuk dapat berperan dalam bidang yang<br>
                         membawa manfaat bagi masyarakat.
+                    </p>
+                    <p class="text-white d-lg-none">
+                        Kami memahami bahwa batubara adalah salah<br>
+                        satu sumber daya alam yang berperan penting<br>
+                        bagi ketersediaan energi bagi manusia. Upaya<br>
+                        kami masuk kesektor pertambangan batubara,<br>
+                        yang membutuhkan kesungguhan dalam<br>
+                        mengelolanya, berawal dari keinginan untuk<br>
+                        dapat berperan dalam bidang yang membawa<br>
+                        manfaat bagi masyarakat.
                     </p>
                     <a href="about.html" class="link-white-border my-3 d-inline-block">
                         SELENGKAPNYA
@@ -289,7 +420,7 @@
                 </div>
             </div>
             <div class="col-lg-9 pr-lg-0">
-                <img class="white-shadow-right" src="images/white-shadow-right-09.png" alt="">
+                <img class="white-shadow-right d-none d-lg-block" src="images/white-shadow-right-09.png" alt="">
                 <div class="carousel-ourbusiness owl-theme">
                     <div class="item">
                         <div class="thumbnail">
