--- a/index.html
+++ b/index.html
@@ -400,22 +400,21 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid home-mid-content pt-lg-5">
+    <div class="container-fluid home-mid-content pt-5">
         <div class="row my-5">
-            <div class="col-lg-3 py-lg-5 pl-lg-0">
+            <div class="col-lg-3 py-lg-5 pl-0">
                 <div class="wrapper d-flex">
                     <div class="inline-block">
-                        <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                        <img class="w-auto mt-5" src="images/line-gray-11.png" alt="">
                     </div>
                     <div class="inline-block pl-lg-4">
                         <p class="text-orange">
                             BISNIS KAMI
                         </p>
-                        <h5>
-                            PT Ansaf Inti Resources<br>
-                            memiliki bisnis utama<br>
-                            dibindang pertambangan<br>
-                        </h5>
+                        <h1>
+                            Solution through<br>
+                            Partnership 
+                        </h1>
                     </div>
                 </div>
             </div>
