--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="col-lg-10">
                                 <div class="wrapper d-flex d-lg-none">
                                     <div class="inline-block">
-                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                        <img class="mt-4" src="images/line-gray-11.png" alt="">
                                     </div>
                                     <div class="inline-block pl-2">
                                         <h1 class="text-white">
@@ -405,16 +405,16 @@
             <div class="col-lg-3 py-lg-5 pl-0">
                 <div class="wrapper d-flex">
                     <div class="inline-block">
-                        <img class="w-auto mt-5" src="images/line-gray-11.png" alt="">
+                        <img class="w-auto mt-5 pt-lg-1" src="images/line-gray-11.png" alt="">
                     </div>
                     <div class="inline-block pl-lg-4">
                         <p class="text-orange">
                             BISNIS KAMI
                         </p>
-                        <h1>
+                        <h3>
                             Solution through<br>
                             Partnership 
-                        </h1>
+                        </h3>
                     </div>
                 </div>
             </div>
