--- a/index.html
+++ b/index.html
@@ -141,37 +141,6 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-lg-2 home-caption">
-                                <div class="wrapper d-flex">
-                                    <div class="inline-block">
-                                        <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
-                                    </div>
-                                    <div class="inline-block pl-lg-3">
-                                        <h1 class="text-white">
-                                            Solution
-                                            through
-                                            Partnership
-                                        </h1>
-                                        <p class="text-white">
-                                            Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
-                                            yang dibutuhkan klien
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-10">
-                                <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
-                                <div class="slide-number">
-                                    <h6 class="text-white">
-                                        2/5
-                                    </h6>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="row">
-                            <div class="col-lg-2 home-caption">
                                 <div class="wrapper d-lg-flex d-none">
                                     <div class="inline-block">
                                         <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
@@ -193,7 +162,7 @@
                             <div class="col-lg-10">
                                 <div class="wrapper d-flex d-lg-none">
                                     <div class="inline-block">
-                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                        <img class="mt-4" src="images/line-gray-11.png" alt="">
                                     </div>
                                     <div class="inline-block pl-2">
                                         <h1 class="text-white">
@@ -201,7 +170,7 @@
                                             through<br>
                                             Partnership
                                         </h1>
-                                        <p class="text-white  my-4">
+                                        <p class="text-white my-4">
                                             Ansaf sangat tepat menjadi<br>
                                             mitra karena memerikan solusi<br>
                                             yang dibutuhkan klien
@@ -242,7 +211,7 @@
                             <div class="col-lg-10">
                                 <div class="wrapper d-flex d-lg-none">
                                     <div class="inline-block">
-                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                        <img class="mt-4" src="images/line-gray-11.png" alt="">
                                     </div>
                                     <div class="inline-block pl-2">
                                         <h1 class="text-white">
@@ -250,7 +219,7 @@
                                             through<br>
                                             Partnership
                                         </h1>
-                                        <p class="text-white  my-4">
+                                        <p class="text-white my-4">
                                             Ansaf sangat tepat menjadi<br>
                                             mitra karena memerikan solusi<br>
                                             yang dibutuhkan klien
@@ -291,7 +260,7 @@
                             <div class="col-lg-10">
                                 <div class="wrapper d-flex d-lg-none">
                                     <div class="inline-block">
-                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                        <img class="mt-4" src="images/line-gray-11.png" alt="">
                                     </div>
                                     <div class="inline-block pl-2">
                                         <h1 class="text-white">
@@ -299,7 +268,7 @@
                                             through<br>
                                             Partnership
                                         </h1>
-                                        <p class="text-white  my-4">
+                                        <p class="text-white my-4">
                                             Ansaf sangat tepat menjadi<br>
                                             mitra karena memerikan solusi<br>
                                             yang dibutuhkan klien
@@ -340,7 +309,7 @@
                             <div class="col-lg-10">
                                 <div class="wrapper d-flex d-lg-none">
                                     <div class="inline-block">
-                                        <img class="w-auto mt-4" src="images/line-gray-11.png" alt="">
+                                        <img class="mt-4" src="images/line-gray-11.png" alt="">
                                     </div>
                                     <div class="inline-block pl-2">
                                         <h1 class="text-white">
@@ -348,7 +317,7 @@
                                             through<br>
                                             Partnership
                                         </h1>
-                                        <p class="text-white  my-4">
+                                        <p class="text-white my-4">
                                             Ansaf sangat tepat menjadi<br>
                                             mitra karena memerikan solusi<br>
                                             yang dibutuhkan klien
