--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <div class="col-lg-3 py-lg-5 pl-0">
                 <div class="wrapper d-flex">
                     <div class="inline-block">
-                        <img class="w-auto mt-5 pt-lg-1" src="images/line-gray-11.png" alt="">
+                        <img class="mt-5 pt-lg-1" src="images/line-gray-11.png" alt="">
                     </div>
                     <div class="inline-block pl-lg-4">
                         <p class="text-orange">
