--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     <div class="inline-block">
                         <img class="mt-5 pt-lg-1" src="images/line-gray-11.png" alt="">
                     </div>
-                    <div class="inline-block pl-lg-4">
+                    <div class="inline-block pl-lg-4 pl-2">
                         <p class="text-orange">
                             BISNIS KAMI
                         </p>
@@ -387,7 +387,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-9 pr-lg-0">
+            <div class="col-lg-9 pr-0 py-lg-0 py-5">
                 <img class="white-shadow-right d-none d-lg-block" src="images/white-shadow-right-09.png" alt="">
                 <div class="carousel-ourbusiness owl-theme">
                     <div class="item">
@@ -448,7 +448,7 @@
                                 <img class="img-fluid" src="images/home-our-business-10.jpg">
                                 <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
                             </div>
-                            <div class="title">
+                            <div class="title text-white">
                                 ANSAF MINING
                             </div>
                         </div>
@@ -457,24 +457,40 @@
             </div>
         </div>
         <div class="row bg-mid-value">
-            <img class="cloud move-left" src="images/ornaments-home-bottom-08.png" alt="">
+            <img class="cloud move-left d-none d-lg-block" src="images/ornaments-home-bottom-08.png" alt="">
+            <img class="cloud-mobile move-left d-lg-none" src="images/home-our-business-orn-mobile-15.png" alt="">
             <img class="tractors move-right" src="images/ornaments-home-bottom-09.png" alt="">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-9 offset-lg-3">
-                        <h6 class="text-orange">
+                    <div class="col-lg-9 offset-lg-3 pl-0 pl-lg-3 pr-0">
+                        <h6 class="text-orange d-none d-lg-block">
                             NILAI-NILAI KAMI
                         </h6>
-                        <h3 class="text-dark-blue">
+                        <h3 class="text-dark-blue d-none d-lg-block">
                             Melangkah setahap demi setahap, dengan<br>
                             keyakinan dan integritas, menampilkan<br>
                             produktifitas, komitmen dan kesetiaan.
                         </h3>
+                        <div class="wrapper d-lg-none d-flex">
+                            <div class="inline-block">
+                                <img class="mt-1" src="images/line-gray-11.png" alt="">
+                            </div>
+                            <div class="inline-block pl-2">
+                                <h3 class="text-dark-blue">
+                                    NILAI-NILAI KAMI
+                                </h3>
+                                <p class="text-dark-blue font-roboto d-lg-none my-5">
+                                    Melangkah setahap demi setahap, dengan<br>
+                                    keyakinan dan integritas, menampilkan<br>
+                                    produktifitas, komitmen dan kesetiaan.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row my-lg-5">
-                    <div class="col-lg-9 offset-lg-3 pr-lg-5">
-                        <div class="row">
+                    <div class="col-lg-9 offset-lg-3 pr-lg-5 pr-0 pl-2">
+                        <div class="row d-none d-lg-flex">
                             <div class="col-lg-4">
                                 <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-08.jpg" alt="">
                                 <h6 class="text-white title-thumbnail">Sinergi yang Kuat</h6>
@@ -488,13 +504,31 @@
                                 <h6 class="text-white title-thumbnail">Beroperasi Secara Produktif</h6>
                             </div>
                         </div>
+                        <div class="row d-lg-none">
+                            <div class="col-lg-12">
+                                <div class="carousel-ourbusiness">
+                                    <div class="item">
+                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-08.jpg" alt="">
+                                        <h6 class="text-white title-thumbnail">Sinergi yang Kuat</h6>
+                                    </div>
+                                    <div class="item">
+                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-09.jpg" alt="">
+                                        <h6 class="text-white title-thumbnail">Setulus Hati</h6>
+                                    </div>
+                                    <div class="item">
+                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-09.jpg" alt="">
+                                        <h6 class="text-white title-thumbnail">Setulus Hati</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="container-fluid bottom-content">
-        <div class="row news-section">
+        <div class="row news-section d-none d-lg-block">
             <div class="col-lg-12 px-lg-0">
                 <img class="ornament-blue" src="images/segitiga-biru-kiri-12.png" alt="">
                 <img class="img-content" src="images/news-images-content-10-08.jpg" alt="">
@@ -522,6 +556,36 @@
                 </div>
             </div>
         </div>
+        <div class="row news-section-mobile d-lg-none">
+            <div class="col-lg-12 px-0">
+                <img class="ornament-blue" src="images/segitiga-biru-kiri-12.png" alt="">
+                <img class="img-fluid" src="images/news-image-content-mobile-17.jpg" alt="">
+                <div class="details">
+                    <div class="content-wrapper d-flex">
+                        <div class="inline-block">
+                            <img class="" src="images/line-gray-11.png" alt="">
+                        </div>
+                        <div class="inline-block pl-2">
+                            <h6 class="text-orange">
+                                CSR & HSE
+                            </h6>
+                            <h4 class="text-white">
+                                Berdaya Bukan Semata<br>
+                                Materi
+                            </h4>
+                            <p class="text-white">
+                                Tanggung Jawab Sosial Perusahaan bukan hanya<br>
+                                sekedar kewajiban. Bagi kami, tanggung jawab<br>
+                                sosial melekat dengan operasi kami di manapun.
+                            </p>
+                            <a href="csr.html" class="link-white-border my-3 d-inline-block">
+                                SELENGKAPNYA
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="container-fluid footer-content-home">
         <div class="row text-center">
@@ -534,7 +598,7 @@
         <div class="row">
             <div class="container">
                 <div class="row text-center counter-wrapper">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 py-lg-0 py-5">
                         <h2 class="text-blue number-counter font-75" data-count="9">
                             0
                         </h2>
@@ -542,7 +606,7 @@
                             TAHUN
                         </h4>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 py-lg-0 py-5">
                         <h2 class="text-blue number-counter font-75"  data-count="100">
                             0
                         </h2>
@@ -550,7 +614,7 @@
                             KLIEN
                         </h4>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 py-lg-0 py-5">
                         <h2 class="text-blue number-counter font-75"  data-count="2000">
                             0
                         </h2>
@@ -562,12 +626,12 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid footer-details mb-lg-5">
+    <div class="container-fluid footer-details mb-5">
         <div class="row">
           <div class="col-lg-2">
               <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 py-lg-0 py-4">
               <p class="text-gray">
                   Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
                   Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
@@ -578,11 +642,11 @@
               <a href="#" class="link-orange-border">
                  <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
               </a>
-              <p class="text-gray mt-lg-3">
+              <p class="text-gray mt-lg-3 mt-2 fax-details">
                   Fax (0541) 261 532
               </p>
           </div>
-          <div class="col-lg-2 pl-lg-0 offset-lg-1">
+          <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
               <a href="#" class="text-gray d-block">
                   <i class="fab fa-facebook-square"></i> Ansaf Indonesia
               </a>
