--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
     <div class="container-fluid footer bg-dark-blue">
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-white mt-lg-3 text-center">
+                <p class="text-white mt-3 text-center">
                     Copyright © 2020 PT Ansaf Inti Resources
                 </p>
             </div>
